--- a/src/pages/Menus/Menus.module.css
+++ b/src/pages/Menus/Menus.module.css
@@ -1,8 +1,8 @@
 .menu {
   display: grid;
-  grid-template-rows: 30% 1fr auto;
+  grid-template-rows: 25% 20% 1fr auto;
   height: 100dvh;
-  gap: 15rem;
+  gap: 2rem;
 }
 
 .menuHeader {
@@ -18,6 +18,33 @@
 .locationName {
   font-size: 5rem;
   opacity: 90%;
+  margin-bottom: 2px;
+}
+
+.menuInfo {
+  padding-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.menuDescription {
+  margin-bottom: 1.2rem;
+  font-size: 1.2rem;
+}
+
+.menuDetails {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 3px;
+}
+
+.menuDetails li {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 1.1rem;
 }
 
 .menuList {
