--- a/src/features/profile/ProfileMenu/ProfileMenu.module.css
+++ b/src/features/profile/ProfileMenu/ProfileMenu.module.css
@@ -3,14 +3,17 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  background-color: rgba(255, 255, 255, 0.25);
-  padding: 3rem;
+
   border-radius: 5px;
   align-items: center;
 }
 
 .profileMenu li {
-  border-bottom: 1px solid blueviolet;
+  gap: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .delete {
