--- a/src/ui/modal/Modal.module.css
+++ b/src/ui/modal/Modal.module.css
@@ -21,9 +21,10 @@
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
+  padding-top: 6rem;
   align-items: center;
-  height: 50%;
+  height: 70%;
   width: 100%;
   position: fixed;
   bottom: 0;
