--- a/src/features/categories/CategoriesList/CategoriesList.module.css
+++ b/src/features/categories/CategoriesList/CategoriesList.module.css
@@ -2,9 +2,10 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 5rem;
+  gap: 2rem;
   font-size: 2rem;
   align-items: center;
+  justify-content: center;
 }
 
 .listItem {
