--- a/src/features/menus/MenuList/MenuList.module.css
+++ b/src/features/menus/MenuList/MenuList.module.css
@@ -18,4 +18,8 @@
   font-weight: 600;
   background-color: rgba(255, 255, 255, 0.3);
   text-transform: capitalize;
+  font-size: 1.8rem;
+  border-left: 2px solid blueviolet;
+  box-shadow: -2px 0px 6px 0px rgba(137, 43, 226, 0.865);
+  cursor: pointer;
 }
