--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -18,6 +21,8 @@ body {
   background-size: cover;
   background-attachment: fixed; */
   background-color: black;
+  /* font-family: "Open Sans", sans-serif; */
+  font-family: "Raleway", sans-serif;
 }
 
 button {
@@ -33,4 +38,10 @@ a {
 ul,
 ol {
   list-style: none;
+}
+
+input:focus {
+  outline: none;
+  border-color: blueviolet;
+  box-shadow: 0px 0px 8px 0px blueviolet;
 }
