--- a/src/pages/Categories/Categories.module.css
+++ b/src/pages/Categories/Categories.module.css
@@ -11,11 +11,12 @@
 
 .header {
   font-size: 2rem;
-  border-bottom: 0.5px solid blueviolet;
+  /* border-bottom: 0.5px solid blueviolet; */
 }
 
 .addIcon {
   background-color: blueviolet;
   padding: 3px;
   border-radius: 5px;
+  cursor: pointer;
 }
