--- a/src/ui/Header/Header.module.css
+++ b/src/ui/Header/Header.module.css
@@ -29,6 +29,8 @@
   border-bottom: 1px solid blueviolet;
   border-radius: 5px;
   cursor: pointer;
+
+  box-shadow: -2px 2px 4px 0px blueviolet;
 }
 
 .logo {
@@ -39,4 +41,6 @@
   border-radius: 5px;
   cursor: pointer;
   font-weight: 600;
+  text-shadow: 4px 2px 5px blueviolet;
+  box-shadow: 2px 2px 4px 0px blueviolet;
 }
