--- a/src/features/categories/AddCategoryForm/AddCategoryForm.module.css
+++ b/src/features/categories/AddCategoryForm/AddCategoryForm.module.css
@@ -5,12 +5,13 @@
   border-radius: 5px;
   gap: 1rem;
   width: 100%;
+  background-color: rgb(37, 37, 37);
 
   padding: 2rem;
 }
 
 .form input {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   padding: 1rem 1.2rem;
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 0.8);
