finished dropdown menu style and delete categories and items functionality

--- a/src/ui/DropDownMenu/DropDownMenu.module.css
+++ b/src/ui/DropDownMenu/DropDownMenu.module.css
@@ -1,4 +1,5 @@
 .container {
+  z-index: 100;
   position: fixed;
   /* top: 0;
   bottom: 0; */
@@ -6,7 +7,7 @@
   backdrop-filter: blur(5px);
   border: 0.1px solid blueviolet;
 
-  height: 100px;
+  height: 130px;
   width: 50px;
   display: flex;
   flex-direction: column;
@@ -14,8 +15,20 @@
   justify-content: center;
   gap: 2rem;
   border-radius: 10px;
+
+  animation: 0.3s show ease-in-out;
 }
 
 .container button {
   color: #fff;
+}
+
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 100%;
+  }
 }
