--- a/src/ui/Footer/Footer.module.css
+++ b/src/ui/Footer/Footer.module.css
@@ -1,6 +1,7 @@
 .footer {
   /* background-color: blue; */
-  padding: 1rem 0.5rem;
-  text-align: center;
-  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0;
 }
