worked on edit-locations form,needs more work

--- a/src/ui/modal/Modal.module.css
+++ b/src/ui/modal/Modal.module.css
@@ -30,6 +30,9 @@
   bottom: 0;
   transform: translateY(1000px);
   animation: 0.7s entry ease-out forwards;
+  z-index: 50;
+  overflow-y: scroll;
+  padding-bottom: 10rem;
 }
 
 @keyframes entry {
