--- a/src/ui/FormError/FormError.module.css
+++ b/src/ui/FormError/FormError.module.css
@@ -1,7 +1,10 @@
 .formError {
-  margin-top: 5px;
   color: blueviolet;
   font-weight: 600;
   font-size: 1.2rem;
   text-align: center;
+}
+
+.largeMarginBottom {
+  padding-top: 6rem;
 }
