--- a/src/features/menus/CategoryItemsList/CategoryItemsList.module.css
+++ b/src/features/menus/CategoryItemsList/CategoryItemsList.module.css
@@ -1,4 +1,4 @@
-.itemsList {
+.categoryItemsList {
   background-color: rgba(255, 255, 255, 0.1);
   display: flex;
   flex-direction: column;
@@ -11,7 +11,7 @@
   overflow: scroll;
 }
 
-.itemsList li {
+.categoryItemsList li {
   flex-shrink: 0;
 
   padding-left: 2rem;
@@ -31,14 +31,14 @@
   cursor: pointer;
 }
 
-.itemsList h3 {
+.categoryItemsList h3 {
   padding-top: 2px;
   font-size: 1.4rem;
   margin-bottom: 4px;
   text-transform: capitalize;
 }
 
-.itemsList p {
+.categoryItemsList p {
   font-weight: 200;
 }
 
