--- a/src/features/items/Item/Item.module.css
+++ b/src/features/items/Item/Item.module.css
@@ -1,12 +1,11 @@
 .listItem {
   height: auto;
   min-height: 5rem;
-
   display: flex;
   gap: 4px;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: var(--background-elevation-three);
   width: 100%;
   height: 9rem;
   max-width: 50rem;
