--- a/src/pages/Categories/Categories.module.css
+++ b/src/pages/Categories/Categories.module.css
@@ -1,6 +1,3 @@
-.categories {
-}
-
 .headerContainer {
   display: flex;
   justify-content: space-between;
@@ -15,8 +12,14 @@
 }
 
 .addIcon {
-  background-color: blueviolet;
-  padding: 3px;
+  background-color: rgb(118, 38, 193);
+  padding: 4px;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.plusIcon {
+  color: #fff;
+  font-size: 2rem;
+  stroke-width: 2px;
 }
