--- a/src/pages/StartingWizard/StartingWizard.module.css
+++ b/src/pages/StartingWizard/StartingWizard.module.css
@@ -27,7 +27,7 @@
   content: "";
   height: 1px;
   width: 12rem;
-  background-color: blueviolet;
+  background-color: var(--brand-color-1);
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -35,8 +35,8 @@
 
 .stepNumbers div {
   z-index: 100;
-  background-color: black;
-  border: 2px solid blueviolet;
+  background-color: var(--app-background-color);
+  border: 2px solid var(--brand-color-1);
   font-size: 2rem;
   height: 3rem;
   width: 3rem;
@@ -45,7 +45,7 @@
 }
 
 .stepNumbers div.active {
-  background-color: blueviolet;
+  background-color: var(--brand-color-1);
 }
 
 .inputContainer {
@@ -67,21 +67,26 @@ select {
   padding: 1rem 1.2rem;
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid blueviolet;
+  border: 1px solid var(--brand-color-1);
   width: 100%;
 }
 
-.next {
+.next,
+.back {
   padding: 1rem 4rem;
-  align-self: center;
-  margin-top: 1rem;
+  margin-left: auto;
+  margin-top: 3rem;
   font-size: 1.5rem;
   font-weight: 600;
-  background-color: blueviolet;
+  background-color: var(--brand-color-1);
   text-align: center;
   color: #fff;
   border-radius: 5px;
   text-transform: capitalize;
+}
+
+.back {
+  background-color: var(--brand-color-2);
 }
 
 .fileLabel {
@@ -90,7 +95,7 @@ select {
 
 .imageLabel {
   align-self: flex-start;
-  background-color: blueviolet;
+  background-color: var(--brand-color-2);
   padding: 1rem 2rem;
   border-radius: 5px;
   font-weight: 600;
