--- a/src/ui/FormError/FormError.module.css
+++ b/src/ui/FormError/FormError.module.css
@@ -1,5 +1,5 @@
 .formError {
-  color: blueviolet;
+  color: var(--brand-color-1);
   font-weight: 600;
   font-size: 1.2rem;
   text-align: center;
