--- a/src/ui/Header/Header.module.css
+++ b/src/ui/Header/Header.module.css
@@ -1,5 +1,4 @@
 .header {
-  /* background-color: red; */
   padding: 1rem;
   padding-bottom: 2rem;
 }
@@ -8,39 +7,41 @@
   display: flex;
   justify-content: space-between;
   font-size: 1.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
 .controls {
-  padding: 2rem 0;
-  border-radius: 30px;
-  margin-right: 1.5rem;
-  margin-left: 1.5rem;
-  background-color: rgba(255, 255, 255, 0.1);
-  max-width: 100rem;
+  border-radius: 10px;
+  background-color: var(--background-elevation-one);
+  width: 60%;
   margin: 0 auto;
+  padding: 1rem;
 }
 
 .iconContainer {
-  color: blueviolet;
+  color: var(--brand-color-1);
   padding-left: 1rem;
   font-size: large;
-  border-left: 1px solid blueviolet;
-  border-bottom: 1px solid blueviolet;
+  border-left: 1px solid var(--brand-color-1);
+  border-bottom: 1px solid var(--brand-color-1);
   border-radius: 5px;
   cursor: pointer;
+  padding-right: 0.5rem;
+  padding-top: 0.5rem;
 
-  box-shadow: -2px 2px 4px 0px blueviolet;
+  box-shadow: -3px 3px 3px 0px var(--shadow-header);
 }
 
 .logo {
   padding-right: 1rem;
+  padding-left: 1rem;
+  padding-top: 0.5rem;
   font-size: large;
-  border-right: 1px solid blueviolet;
-  border-bottom: 1px solid blueviolet;
+  border-right: 1px solid var(--brand-color-1);
+  border-bottom: 1px solid var(--brand-color-1);
   border-radius: 5px;
   cursor: pointer;
   font-weight: 600;
-  text-shadow: 4px 2px 5px blueviolet;
-  box-shadow: 2px 2px 4px 0px blueviolet;
+  text-shadow: 4px 2px 5px var(--shadow-header);
+  box-shadow: 3px 3px 4px 0px var(--shadow-header);
 }
