--- a/src/ui/modal/Modal.module.css
+++ b/src/ui/modal/Modal.module.css
@@ -14,7 +14,8 @@
 }
 
 .content {
-  background-color: rgba(255, 255, 255, 0.1);
+  border-top: 0.2px solid var(--brand-color-2);
+  background-color: var(--background-elevation-one);
   backdrop-filter: blur(15px);
   padding: 3rem;
   padding-top: 2rem;
@@ -55,5 +56,5 @@
 }
 
 .closeIcon {
-  color: #fff;
+  color: var(--text-color-main);
 }
