--- a/src/pages/Menus/MenusWhite.module.css
+++ b/src/pages/Menus/MenusWhite.module.css
@@ -66,3 +66,9 @@
   border: 0.1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.1);
 }
+
+/* INFO DETAILS */
+
+.infoContainer p {
+  color: rgba(0, 0, 0, 0.7);
+}
