--- a/src/features/categories/AddCategoryForm/AddCategoryForm.module.css
+++ b/src/features/categories/AddCategoryForm/AddCategoryForm.module.css
@@ -24,6 +24,7 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  color: black;
   /* add custom arrow later! */
 }
 
