--- a/src/ui/Header/Header.module.css
+++ b/src/ui/Header/Header.module.css
@@ -29,7 +29,7 @@
   padding-right: 0.5rem;
   padding-top: 0.5rem;
 
-  box-shadow: -3px 3px 3px 0px var(--shadow-header);
+  /* box-shadow: -3px 3px 3px 0px var(--shadow-header); */
 }
 
 .logo {
@@ -43,5 +43,5 @@
   cursor: pointer;
   font-weight: 600;
   text-shadow: 4px 2px 5px var(--shadow-header);
-  box-shadow: 3px 3px 4px 0px var(--shadow-header);
+  /* box-shadow: 3px 3px 4px 0px var(--shadow-header); */
 }
