--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,7 @@
   --background-elevation-two: #222222;
   --background-elevation-three: #242424;
   --background-elevation-six: #2c2c2c;
-
-  /* border radius */
+  --background-elevation-high: #3d3d3d; /* border radius */
   --border-radius-button: 5px;
 
   /* text */
@@ -55,8 +54,9 @@ ol {
 }
 
 input:focus,
-textarea:focus {
+textarea:focus,
+select:focus {
   outline: none;
   border-color: var(--brand-color-1);
-  box-shadow: 0px 0px 8px 0px var(--shadow-header);
+  box-shadow: 0px 0px 8px 1px var(--shadow-header);
 }
