--- a/src/pages/StartingWizard/StartingWizard.module.css
+++ b/src/pages/StartingWizard/StartingWizard.module.css
@@ -66,9 +66,10 @@ select {
   font-size: 1.6rem;
   padding: 1rem 1.2rem;
   border-radius: 4px;
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid var(--brand-color-1);
+  background-color: var(--background-elevation-high);
+  border: 0.5px solid var(--brand-color-1);
   width: 100%;
+  color: var(--text-color-main);
 }
 
 .next,
