--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
-  --brand-color-1: rgb(115, 42, 184);
+  --brand-color-1: #732ab8;
   --brand-color-2: rgb(115, 42, 184, 0.6);
   --app-background-color: #121212;
   --background-elevation-one: #1e1e1e;
@@ -36,6 +36,8 @@ body {
   color: var(--text-color-main);
   background-color: var(--app-background-color);
   font-family: "Raleway", sans-serif;
+  max-width: 100rem;
+  margin: 0 auto;
 }
 
 button {
@@ -59,4 +61,10 @@ select:focus {
   outline: none;
   border-color: var(--brand-color-1);
   box-shadow: 0px 0px 8px 1px var(--shadow-header);
+}
+
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 72.5%;
+  }
 }
