--- a/src/pages/Menus/MenusCommon.module.css
+++ b/src/pages/Menus/MenusCommon.module.css
@@ -73,10 +73,12 @@
   align-items: center;
   justify-content: flex-start;
   gap: 1.5rem;
-  overflow: scroll;
+  overflow-y: scroll;
   padding-bottom: 2rem !important;
   border-radius: 5px;
   flex: content;
+  overflow-y: scroll;
+  scrollbar-color: var(--brand-color-1) rgba(255, 255, 255, 0.281);
 }
 
 .menuList li {
@@ -98,6 +100,9 @@
   flex-shrink: 0;
   flex-grow: 1;
 }
+.menuList li a {
+  width: 100%;
+}
 
 /* CATEGORY INDIVIDUAL ITEM */
 
@@ -111,7 +116,8 @@
   border-radius: 5px;
   max-width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
+  scrollbar-color: var(--brand-color-1) rgba(255, 255, 255, 0.281);
 }
 
 .categoryItemsList li {
